dataset1235/2025-2/1955397009/users/1721067133/executions/1107611404_3921830315.log
== RUN (2025-08-21 13:35:30)
-- CODE: 
litros = float("Informe a quantidade de litros abastecidos: ")

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * votal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = float("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Informe a quantidade de litros abastecidos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:35:52)
-- CODE: 
litros = input("Informe a quantidade de litros abastecidos: ")

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * votal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vtotal1 = (litros * 2.86) + 50
               ~~~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:37:23)
-- CODE: 
litros = float(input("Informe a quantidade de litros abastecidos: "))

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * vtotal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Informe a quantidade de litros abastecidos: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Informe a quantidade de litros abastecidos: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Informe a quantidade de litros abastecidos: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Informe a quantidade de litros abastecidos: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Informe a quantidade de litros abastecidos: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Informe a quantidade de litros abastecidos: 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:37:18)
-- CODE: 
litros = float(input("Informe a quantidade de litros abastecidos: "))

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * vtotal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Informe a quantidade de litros abastecidos: 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Informe a quantidade de litros abastecidos: 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Informe a quantidade de litros abastecidos: 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Informe a quantidade de litros abastecidos: 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Informe a quantidade de litros abastecidos: 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Informe a quantidade de litros abastecidos: 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:35:10)
-- CODE: 
litros = int("Informe a quantidade de litros abastecidos: ")

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * votal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    litros = int("Informe a quantidade de litros abastecidos: ")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: 'Informe a quantidade de litros abastecidos: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:36:56)
-- CODE: 
litros = float(input("Informe a quantidade de litros abastecidos: "))

vtotal1 = (litros * 2.86) + 50
vtotal = vtotal1 + ((34/100) * votal1)

print(round(vtotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vtotal = vtotal1 + ((34/100) * votal1)
                                   ^^^^^^
NameError: name 'votal1' is not defined. Did you mean: 'vtotal1'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
